force-app/main/default/objects/Opportunity/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <label>Industry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Healthcare</fullName><default>false</default><label>Healthcare</label></value>
            <value><fullName>Manufacturing</fullName><default>false</default><label>Manufacturing</label></value>
            <value><fullName>Retail</fullName><default>false</default><label>Retail</label></value>
            <value><fullName>Financial Services</fullName><default>false</default><label>Financial Services</label></value>
            <value><fullName>Technology</fullName><default>false</default><label>Technology</label></value>
            <value><fullName>Hospitality</fullName><default>false</default><label>Hospitality</label></value>
            <value><fullName>Education</fullName><default>false</default><label>Education</label></value>
            <value><fullName>Government</fullName><default>false</default><label>Government</label></value>
            <value><fullName>Logistics</fullName><default>false</default><label>Logistics</label></value>
            <value><fullName>Other</fullName><default>false</default><label>Other</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>