force-app/main/default/objects/Opportunity/fields/Requirements__c.field-meta.xml
<CustomField>
    <fullName>Requirements__c</fullName>
    <label>Requirements</label>
    <type>LongTextArea</type>
    <length>1000</length>
    <description>Comma-separated requirement tags (e.g., payroll,hr,time-tracking)</description>
</CustomField>